Switch to Streamlit Cloud deployment
- Removed Render-specific files (Procfile, render.yaml)
- Added .streamlit/config.toml for Streamlit configuration
- Updated .gitignore to allow Streamlit config

--- a/.gitignore
+++ b/.gitignore
@@ -39,8 +39,8 @@ wheels/
 .installed.cfg
 *.egg
 
-# Streamlit
-.streamlit/
+# Streamlit secrets (keep config.toml, exclude secrets.toml)
+.streamlit/secrets.toml
 
 # IDE
 .vscode/
